--- a/legal/02-Definition.tex
+++ b/legal/02-Definition.tex
@@ -268,8 +268,12 @@ Cloud computing introduces several privacy concerns, including:
 \end{itemize}
 
 
-\subsubsection{Privacy} %% recuperare immagine da lezione
-
+\subsubsection{Lack of control over the data} 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.5\textwidth]{img/cloud_lack_ctrl.png}
+    \label{fig:lack_of_control}
+\end{figure}
 
 
 
