--- a/main.tex
+++ b/main.tex
@@ -42,6 +42,7 @@
 \part{Legal}
 \input{legal/01-introduction}
 \input{legal/02-Definition}
+\input{legal/03-Cybercrime_Convention}
 
 \part{Tech}
 \input{tech/01-introduction}
