--- a/legal/03-Cybercrime_Convention.tex
+++ b/legal/03-Cybercrime_Convention.tex
@@ -1,22 +1,174 @@
 \chapter{Convention on Cybercrime}
 
 \section{E-commerce on Dark Web}
+The Dark Web provides a platform for buyers and sellers to engage in e-commerce transactions, often involving illicit goods and services. This anonymous marketplace operates with the same principles as traditional e-commerce, but with heightened security and privacy measures to conceal identities. \\ Vendors on the Dark Web offer a wide range of products, from drugs and weapons to stolen data and hacking services. Buyers can browse listings, read reviews, and complete purchases using cryptocurrencies, all while maintaining a high degree of anonymity.
 
 \subsection{Silk Road}
+Silk Road, often referred to as the "eBay of drugs," was an online marketplace that facilitated the sale of a wide range of illegal substances, including narcotics and controlled substances. At its peak in 2013, Silk Road had a reported annual revenue of \$89.7 million
+
+\begin{itemize}[itemsep=0pt]
+  \item \textbf{Combining Tor, PGP, and Bitcoin}: Ross Ulbricht leveraged the anonymity of Tor, the encryption of PGP, and the decentralized nature of Bitcoin to create the Silk Road marketplace.
+  \item \textbf{Bitcoin-only Payments}: Silk Road required all transactions to be conducted using Bitcoin, providing an added layer of anonymity and making it harder to trace purchases.
+  \item \textbf{User-friendly Interface}: Silk Road featured a well-designed interface that allowed users to easily navigate the site and leave feedback on their transactions.
+  \item \textbf{Intermediary Role:} Silk Road acted as an intermediary, handling the payment processing nad logistics of shipping items purchased on the marketplace.
+\end{itemize}
+
+\subsubsection{Silk Road Investigations}
+
+\begin{itemize}[itemsep=0pt]
+  \item \textbf{Operation "Marco Polo":} Undercover agents from DEA and Secret Service involved in exorting money from Ulbricht and attempting to threaten him.
+  \item \textbf{Silk Road's Scpoe:} At its peck:
+    \begin{itemize}[itemsep=0pt]
+      \item 950,000 registered users
+      \item 1.2 million transactions
+      \item \$79 million in commissions
+    \end{itemize}
+  \item \textbf{Incriminating Errors:} Ulbricht made several mistakes that led to his arrest, including using his real email address and have counterfeit documents delivered to his home.
+\end{itemize}
+
+\subsubsection{Charges Against Ross Ulbricht}
+\begin{itemize}[itemsep=0pt]
+  \item \textbf{SUmmary of Charges:} Ulbricht faced 7 key charges, including drug trafficking, money laundering, and computer hacking, which were consolidated into 3 main counts against him
+  \item \textbf{Legal Process:} The trial lasted just 13 days and resulted in Ulbricht's conviction and life sentence, plus \$180 million in damages
+\end{itemize}
+
+The investigation was possible because involve US citizen, US platform, and US law enforcement. In another country, the same investigation would have been more difficult.
 
 \section{History and objectives of the Convention on Cybercrime (Budapest Convention)}
 
-\subsection{Budapest Convention on Cybercrime }
-%% overview direttamente nella section
+The convention involve 65+ states, and its main objectives are:
+\begin{itemize}[itemsep=0pt]
+  \item Harmonizing national laws on cybercrime
+  \item Improving investigative techniques
+  \item Increasing international cooperation
+\end{itemize}
 
-\subsubsection{Timeline and Ratifications}
+\subsection{Overview of the Convention}
+
+\subsubsection{Timeline and Ratification}
+
+\begin{boxH}
+  The Council of Europe $\neq$ Europe Union, and it's composed by state that are part of the European continent, and its conventions are open to non-European countries.
+\end{boxH}
+
+\begin{itemize}[itemsep=0pt]
+  \item Full Adoption: Committee of Ministers of the Council of Europe, November 8, 2001
+  \item Signature: Budapest, November 23, 2001
+  \item Entry into Force: July 1, 2004
+  \item Participating States (as of April 2023):
+    \begin{itemize}[itemsep=0pt]
+      \item 68 States have ratified
+      \item 2 States signed but not ratified (Ireland, South Africa), so for them is not binding
+    \end{itemize}
+\end{itemize}
 
 \subsubsection{Criticism and Opposition}
+\begin{itemize}[itemsep=0pt]
+  \item \textbf{India:} Initially refused to adopt due to non-participation in drafting
+  \item \textbf{Reconsideration} (since 2018): Surge in cybercrime, but concerns about data sharing with foreign agencies remain
+  \item \textbf{Russia}: Rejected due to concerns about sovereignty, limited cooperation in international investigations, even after some articles were revised to address these concerns
+\end{itemize}
 
+\subsubsection{New Global Cybercrime Treaty (UN, August 8, 2024)}
 
-\subsection{New Global Cybercrime Treaty (UN, August 8, 2024)}
+\textbf{Content}:
+\begin{itemize}[itemsep=0pt]
+  \item Criminalization of unauthorized access to information systems
+  \item Crimes related to online child exploitation and non- consensual explicit content distribution
+\end{itemize}
 
-\subsubsection{Aim of the convention}
+\textbf{Criticism}
+\begin{itemize}[itemsep=0pt]
+  \item Concerns over human rights and press freedom
+  \item Issues with data privacy and overly broad definitions of cybercrime
+\end{itemize}
+
+\subsection{Aim of the Convention}
+The convention aims to assist in combating crimes that are inherently linked to the use of technology, where devices serve as both the tool for committing the crime and the target of the crime
+\begin{boxH}
+  \textbf{Note:} there are differences when a crime is commited through a technology tool, and when the technology is the target of the crime.
+\end{boxH}
+as well as crimes where technology is used to enhance other criminal activities, such as fraud. It provides guidelines for countries to develop domestic cybercrime laws and acts as a foundation for international cooperation between parties.\\The \textbf{first additional protocol} focuses on criminalizing the dissemination of racist and xenophobic material through computer systems, along with threats and insults motivated by racism and xenophobia.\\ The \textbf{second additional protocol} establishes common international rules to enhance cooperation on cybercrime, particularly in the collection of electronic evidence for criminal investigations and proceedings.
+
+\subsection{Key points}
+
+\subsubsection{Original Convention (1 July 2004)}
+\begin{itemize}[itemsep=0pt]
+  \item The convention covers:
+    \begin{itemize}[itemsep=0pt]
+      \item the criminalisation of conduct - ranging from illegal access, data and systems interference to computer-related fraud and dissemination of child abuse material;
+      \item procedural powers to investigate cybercrime and secure electronic evidence in relation to any crime;
+      \item efficient international cooperation between parties.
+    \end{itemize}
+  \item Parties are members of the Cybercrime Convention Committee and share information and experience, assess implementation of the convention or interpret the convention through guidance notes.
+  \item Of the 27 Member States, 26 have ratified the convention - Ireland has signed but not yet ratified it.
+\end{itemize}
+
+\subsubsection{Additional Protocol 1 (1 March 2006)}
+
+This protocol extends the scope of the convention to cover xenophobic and racist propaganda disseminated through computer systems, providing more protection for victims. It furthermore:
+
+\begin{itemize}[itemsep=0pt]
+  \item  Reinforces the legal framework through a set of guidelines for criminalising xenophobia and racist propaganda in cyberspace;
+  \item Enhances the ways and means for international cooperation in the investigation and prosecution of racist and xenophobic crimes online.
+\end{itemize}
+
+\subsubsection{Additional Protocol 2 (8 August 2024)}
+This protocol aims to further enhance international cooperation.\\
+It addresses the particular challenge of electronic evidence relating to
+cybercrime and other offences being held by service providers in
+foreign jurisdictions, but with law enforcement powers limited to
+national boundaries.\\
+Its main features are:
+\begin{itemize}[itemsep=0pt]
+  \item A new legal basis permitting a direct request to registrars in other jurisdictions to obtain domain name registration information;
+  \item A new legal base permitting direct orders to service providers in other jurisdictions to obtain subscriber information
+  \item Enhanced means for obtaining subscriber information and traffic data through government-to-government cooperation
+  \item Expedited cooperation in emergency situations including the use of joint investigation teams and joint investigations. Key points of the Additional Protocol 2 (8 August 2024)
+\end{itemize}
 
 \section{Harmonization of national laws and international cooperation}
 
+\subsection{Internetional Cooperation Provisions}
+\begin{itemize}[itemsep=0pt]
+  \item \textbf{Coooperation Principle:} Parties are to cooperate "to the widest extent possible" in investigating electronic evidence.
+  \item \textbf{Expedited Mutual Assistance:} Issue with Current Mechanisms: Mutual assistance requests are often slow and take months.
+  \item \textbf{Convention solution:} Allows for expedited requests using "expedited means of communication" and Expedited means must provide adequate levels of security and authentication. (So can be used encrypted physical device for data transfer)
+  \item \textbf{Voluntary Information Sharing:} Parties may share information without a formal request if it would assist in investigations or help the receiving party with any related offences.
+\end{itemize}
+
+\subsection{Mutual Assistance Provisions}
+\begin{itemize}[itemsep=0pt]
+  \item  \textbf{Procedural Powers for Assistance:}
+    \begin{itemize}[itemsep=0pt]
+      \item Expedited Preservation of stored computer data.
+      \item Expedited Disclosure of traffic data.
+      \item Real-time Collection of traffic data and interception of content data: parties provide assistance according to domestic laws and applicable treaties, subject to any reservations.
+    \end{itemize}
+  \item \textbf{Art 23 - General Cooperation Principle:}
+    \begin{itemize}[itemsep=0pt]
+      \item Mutual assistance "to the widest extent possible" for:
+      \item Cyber-related offences.
+      \item Collection of electronic evidence for any criminal offence.
+    \end{itemize}
+  \item \textbf{Restrictions:}
+    \begin{itemize}[itemsep=0pt]
+      \item Cooperation may be restricted in cases of:
+      \item Extradition.
+      \item Mutual assistance regarding real-time collection of traffic data.
+      \item Interception of content data
+    \end{itemize}
+\end{itemize}
+
+\subsection{24/7 Network for Immediate Assistance}
+\textbf{Provision for Constant Availability:}
+\begin{itemize}
+  \item Each party must designate a contact point available 24/7
+  \item Purpose: Provide immediate assistance for cybercrime investigations, proceedings, or the collection of electronic evidence
+  \item Based on the G8 network of contact points model
+\end{itemize}
+\textbf{Significance:} aims to expedite the processing of urgent
+mutual assistance requests, overcoming current delays in
+traditional bureaucratic channels
+
+\section{Legal measures against computer-related fraud and forgery}
