--- a/legal/02-Definition.tex
+++ b/legal/02-Definition.tex
@@ -50,7 +50,6 @@ Three main types of digital evidence
     are entered by the human, and the result is worked out by the computer
 \end{itemize}
 
-\newpage
 \subsubsection{Julie Amero Case}
 
 \begin{boxH}
@@ -63,7 +62,7 @@ for some popup that appear during a lesson
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=1\textwidth]{img/amero_case.png}
+  \includegraphics[width=0.5\textwidth]{img/amero_case.png}
   \caption{Timeline of the case}
   \label{fig:amero case}
 \end{figure}
@@ -259,7 +258,7 @@ Cloud computing introduces several privacy concerns, including:
   \label{fig:lack_of_control}
 \end{figure}
 
-\subsubsection{Jurisdiction}  %% check, testo da GPT
+\subsubsection{Jurisdiction}  
 
 In addressing the “loss of location” issue within the realm of cloud computing, we have four possible legal principles that can be applied:
 
