--- a/legal/03-Cybercrime_Convention.tex
+++ b/legal/03-Cybercrime_Convention.tex
@@ -18,10 +18,12 @@ Silk Road, often referred to as the "eBay of drugs," was an online marketplace t
 \begin{itemize}[itemsep=0pt]
   \item \textbf{Operation "Marco Polo":} Undercover agents from DEA and Secret Service involved in exorting money from Ulbricht and attempting to threaten him.
   \item \textbf{Silk Road's Scpoe:} At its peck:
-    \begin{itemize}[itemsep=0pt]
-      \item 950,000 registered users
-      \item 1.2 million transactions
-      \item \$79 million in commissions
+    \begin{itemize}[itemsep=0pt, topsep=0pt]
+      \begin{multicols}{3}
+        \item 950,000 registered users
+        \item 1.2 million transactions
+        \item \$79 million in commissions
+      \end{multicols}
     \end{itemize}
   \item \textbf{Incriminating Errors:} Ulbricht made several mistakes that led to his arrest, including using his real email address and have counterfeit documents delivered to his home.
 \end{itemize}
@@ -96,9 +98,9 @@ as well as crimes where technology is used to enhance other criminal activities,
 \begin{itemize}[itemsep=0pt]
   \item The convention covers:
     \begin{itemize}[itemsep=0pt]
-      \item the criminalisation of conduct - ranging from illegal access, data and systems interference to computer-related fraud and dissemination of child abuse material;
-      \item procedural powers to investigate cybercrime and secure electronic evidence in relation to any crime;
-      \item efficient international cooperation between parties.
+      \item The criminalisation of conduct: ranging from illegal access, data and systems interference to computer-related fraud and dissemination of child abuse material;
+      \item Procedural powers to investigate cybercrime and secure electronic evidence in relation to any crime;
+      \item Efficient international cooperation between parties.
     \end{itemize}
   \item Parties are members of the Cybercrime Convention Committee and share information and experience, assess implementation of the convention or interpret the convention through guidance notes.
   \item Of the 27 Member States, 26 have ratified the convention - Ireland has signed but not yet ratified it.
@@ -121,9 +123,9 @@ foreign jurisdictions, but with law enforcement powers limited to
 national boundaries.\\
 Its main features are:
 \begin{itemize}[itemsep=0pt]
-  \item A new legal basis permitting a direct request to registrars in other jurisdictions to obtain domain name registration information;
+  \item A new legal basis permitting a direct request to registrars in other jurisdictions to obtain domain name registration information
   \item A new legal base permitting direct orders to service providers in other jurisdictions to obtain subscriber information
-  \item Enhanced means for obtaining subscriber information and traffic data through government-to-government cooperation
+  \item Enhanced means for obtaining subscriber information and traffic data through "government to government" cooperation
   \item Expedited cooperation in emergency situations including the use of joint investigation teams and joint investigations. Key points of the Additional Protocol 2 (8 August 2024)
 \end{itemize}
 
@@ -162,7 +164,7 @@ Its main features are:
 
 \subsection{24/7 Network for Immediate Assistance}
 \textbf{Provision for Constant Availability:}
-\begin{itemize}
+\begin{itemize}[itemsep=0pt]
   \item Each party must designate a contact point available 24/7
   \item Purpose: Provide immediate assistance for cybercrime investigations, proceedings, or the collection of electronic evidence
   \item Based on the G8 network of contact points model
