--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,7 @@
 \usepackage{tcolorbox}
 \usepackage{xcolor}
 \usepackage{enumitem}
+\usepackage{multicol}
 
 \title{Computer Forensics and Cyber Crime Analysis}
 \author{Alessandro Milani}
