--- a/main.tex
+++ b/main.tex
@@ -47,7 +47,7 @@
 \part{Tech}
 \input{tech/01-introduction}
 \input{tech/02-CF_terminoloty}
-% Add more sections as needed
+\input{tech/03-non_trusted_env_issues.tex}
 
 \end{document}
 
